2006-09-01  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* New Auth Framework: document and fine tune permissions view the auth
	core botmodule.
	* Version: when run from a svn checkout, the bot now tries to report
	which svn revision it's at, and if there are local changes

2006-08-31  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Nickserv plugin: bot will now try to inform nickserv when password
	is changed. Moreover it's not necessary to specify the nick anymore if
	you want to change the password for the current bot nick. Also do some
	internal cleanups while we're at it.

2006-08-29  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Script plugin: new (UNSAFE!) echo functions. Just like eval, but
	m.replies the result of the evaluation.
	* New Auth Framework: config keys now have their own permissions. So
	you can allow people to view or edit only some of the config values.
	auth.password defaults to false. Still needs some work.

2006-08-26  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Plugin message mapper: new implementation. Multi-word parameters now
	need not be the last, and it is possible to retrieve the entire
	substring with preserved whitespace by using to_s. Also, parts of the
	map string can be bracketed to make them optional. Examples:
		remind :user [about] *stuff
	will respond to
		remind me about washing my teeth
	and also to
		remind me washing my teeth
	It is possible to have parameters in brackets, in which case they will
	be optional too, and default to nil or [] (resp. single- and
	multi-word parameters) unless an alternative is provided in the
	:defaults hash for the message map options.
	* Script plugin: new (UNSAFE!) eval function. Not documented in help.
	Not permitted by default.

2006-08-25 Mark Kretschmann <markey@web.de>

	* Added quiz plugin, a multiplayer trivia quiz game.

2006-08-20  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Topic plugin: fix a bug that prevented it from loading
	correctly.