@@ -1,3 +1,8 @@
+2006-09-09  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
+
+	* New Auth Framework: rbot was opping anyone who asked for it (opme
+	plugin). Fixed, and cleaned up.
+
 2006-09-01  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
 
 	* New Auth Framework: document and fine tune permissions view the auth
